# UCU

II/UCU_Communications/: hw2.md
II/UCU_CorporateFinances/: Finance-Home-Assignment-2.xlsx  Financial Statements Template Solved.xlsx  Financial Statements Template.xlsx  Midterm.xlsx
II/UCU_CorporateFinances/Lectures/: conspect.md
II/UCU_Machine_Learning/: Illia_Kachko_Practice4.ipynb
II/performance-engineering/hw1-vectorization/: CMakeLists.txt  README.md  main.cpp
II/performance-engineering/hw2-gpu-cuda/: README.md  hw2_cuda.ipynb
II/performance-engineering/hw3-multithreading/: CMakeLists.txt
II/performance-engineering/hw3-multithreading/src/: main.cpp
